--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.446.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
